<resources>
    <string name="app_name">Tubes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="judul">EnterTo Get Lots of\nconvenience for you!</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_user">I’m a new user,</string>
    <string name="have_user">Already have an account?</string>
    <string name="take_note">&lt;u>Take Note&lt;/u></string>
    <string name="forget_pass">If you forget your password, you can reset your password by entering your email. we will send a link to your address to change your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>